--- a/src/pages/pag5.astro
+++ b/src/pages/pag5.astro
@@ -25,7 +25,7 @@ import InfoSection from '../components/InfoSection.astro'
 		<br>
 		<div class="navigation-buttons">
 			<a href="/pag4" class="button">Atrás</a>
-			<a href="/" class="button">Siguiente</a>
+			<a href="/pag6" class="button">Siguiente</a>
 		</div>
 		
 	</main>
